# token-calibrator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
benchmark/: benchmark.js  flores_calibration.py  generate_data.cjs  multilingual_test_data.json  package.json
go/: buckets.go  builtin_rates.go  calibration.go  calibrator.go  calibrator_test.go  estimator.go  go.mod
go/cmd/demo/: main.go
models/: models.json
python/: pyproject.toml
python/examples/: demo.py
python/src/: __init__.py  calibrator.py
python/src/token_calibrator/: __init__.py  buckets.py  builtin_rates.py  calibration.py  calibrator.py  estimator.py
python/tests/: test_calibrator.py
rust/: Cargo.toml
rust/examples/: demo.rs
rust/src/: buckets.rs  builtin_rates.rs  calibration.rs  calibrator.rs  estimator.rs  lib.rs
smoke-tests/: REPORT.md
smoke-tests/go/: go.mod  main.go
smoke-tests/py/: main.py
smoke-tests/rs/: Cargo.toml
smoke-tests/rs/src/: main.rs
smoke-tests/ts/: index.js  package.json
ts/: package.json  tsconfig.json
ts/examples/: demo.ts
ts/src/: buckets.ts  builtin-rates.ts  calibration.ts  calibrator.test.ts  calibrator.ts  estimator.ts  index.ts
