[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "token-calibrator"
version = "1.0.0"
description = "Calibrated, self-learning token estimator for live context-size display"
license = { text = "MIT" }
readme = "../README.md"
repository = { url = "https://github.com/zlogic/token-calibrator" }
keywords = ["token", "estimator", "llm", "regression"]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]
