[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "token-calibrator"
version = "1.0.1"
description = "Calibrated, self-learning token estimator for live context-size display"
license = "MIT"
readme = "README.md"
keywords = ["token", "estimator", "llm", "regression"]
requires-python = ">=3.10"

[project.urls]
repository = "https://github.com/zlogic-libs/token-calibrator"

[tool.setuptools.packages.find]
where = ["src"]
include = ["token_calibrator*"]

[project.optional-dependencies]
dev = ["pytest"]
