[package]
name = "token-calibrator"
version = "1.0.0"
edition = "2021"
description = "Calibrated, self-learning token estimator for live context-size display"
license = "MIT"
repository = "https://github.com/zlogic/token-calibrator"
keywords = ["token", "estimator", "tokenizer", "llm", "regression"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]

[lib]
name = "token_calibrator"
path = "src/lib.rs"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
